--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=newtek
 DB_USERNAME=root
-DB_PASSWORD=qaz2wsx
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
