--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=newtek
-DB_USERNAME=root
-DB_PASSWORD=qaz2wsx
+DB_USERNAME=newtek
+DB_PASSWORD=!QAZ@WSX
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
